few more changes

--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -387,7 +387,7 @@
     "* Can be used in vehicle detection for self driving cars. \n",
     "* Strength is in able to cater to many different applications using a kernel trick and using a proper kernel function almost any sort of classification boundaries can be drawn. It is also particularly useful for two class classification when the feature set is rich . https://docs.microsoft.com/en-us/azure/machine-learning/machine-learning-algorithm-choice\n",
     "* Weakness is its high computation requirement and algorithmic complexity.\n",
-    "* Based on current dataset I chose support vector machine with linear kernel as it is a two class classification and it has a rich feature set 30 features. Dataset seems like it is a linearly separable data atleast with length 30 vectors. If it does not give good enough accuracy non linear kernel can be used.\n"
+    "* Based on current dataset I chose support vector machine with linear kernel as it is a two class classification and it has a rich feature set 30 features. Due to very high number of features, there is a good likely hood that data could be linearly separable however that we can know only after applying the algorithm. I am not saying that the data is definitely linearly separable but it might be and there is no simple, guaranteed way of knowing before hand by just observing data. We have to apply linearSVC and see if the algorithm is giving good enough accuracy, if it does not, non linear kernel can be used for e.g. polynomial, rbf.\n"
    ]
   },
   {
@@ -666,9 +666,9 @@
     "\n",
     "To understand RandomForestClassifier we need to understand DecisionTreeClassifier as RandomForestClassifier is using multiple Decision Tree Classifiers with subset of feature set to come up with a classification. \n",
     "\n",
-    "DecisionTreeClassifier splits dataset on a feature which maximizes similarity(purity) in the classes it splits. It keeps on splitting until the split datasets at the bottom of the tree are all pure. Or algorithm is forced to stop at certain depth of the decision tree. And once that tree is formed, given an unknown input for prediction, it basically goes from the top of the tree asks same question about new input's features and follows it through until input is classified into one of the classes.\n",
+    "DecisionTreeClassifier splits dataset on a feature(variable) which maximizes similarity(purity) in the classes it splits. It keeps on splitting until the split datasets at the bottom of the tree are all pure. Or algorithm is forced to stop at certain depth of the decision tree. And once that tree is formed, given an unknown input for prediction, it basically goes from the top of the tree asks same question about new input's features and follows it through until input is classified into one of the classes. Just to elaborate more on how a decision tree choses variable to split data into, as explained earlier in the first line. It goes through each feature and tries to split it into as similar subsets as possible and calculates entropy(measure of dissimilarity) of both the classes. Once it goes through all features , it finds out the feature split which results in least entropy.\n",
     "\n",
-    "RandomForestClassifier creates several such trees with subset of features, makes an independent prediction from each of them and averages out the output."
+    "RandomForestClassifier creates several such trees with subset of features, makes an independent prediction from each of them and averages out the output. This is how it computes the final result by averaging out the output of all decision trees it uses. for reference , http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html"
    ]
   },
   {
@@ -773,21 +773,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
