--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -509,7 +509,7 @@
    "source": [
     "**Answer:** \n",
     "\n",
-    "1. Optimal policy for the smartcab is \n",
+    "1.Optimal policy for the smartcab is \n",
     "State is defined as (waypoint, light, left, oncoming)\n",
     "\n",
     "|State|Action|Note|\n",
@@ -524,26 +524,27 @@
     "The above table captures the behavior I was aiming for agent to learn when learning right of the way logic\n",
     "\n",
     "\n",
-    "2. There are some states it has not learned properly due to less exploration I believe. For e.g.,\n",
+    "2.There are some states it has not learned properly due to less exploration I believe. For e.g.,\n",
     "\n",
     "|State|Action|Note|\n",
     "|:----|:-----|:----|\n",
     "|('right', 'green', 'forward', 'forward')|forward|Optimal policy would expect right as right on green is allowed, however it seems that path probably was not explored as it had 0 value|\n",
     "\n",
-    "3. It has learned optimal actions for some states as well, for e.g.\n",
+    "3.It has learned optimal actions for some states as well, for e.g.\n",
     "\n",
-    "|State|Action|Note|\n",
-    "|:----|:-----|:----|\n",
-    "|('left', 'red', 'forward', 'forward')| None | Correctly learned on red agent can't take left turn |\n",
-    "|('right', 'red', None, 'forward')| right | Correctly learned on red and when taking right if left car is stopped we can take right|\n",
-    "|('forward', 'green', 'right', None)| forward | on green when going forward we have right of the way |\n",
-    "|('forward', 'red', None, 'left')| None | on red when going forward we can't go |\n",
+    "|State|Action|Note|Q-values|\n",
+    "|:----|:-----|:----|:-------|\n",
+    "|('left', 'red', 'forward', 'forward')| None | Correctly learned on red agent can't take left turn | {forward : -20.32, None : 1.72, right : -9.97, left : 0.00}|\n",
+    "|('right', 'red', None, 'forward')| right | Correctly learned on red and when taking right if left car is stopped we can take right|{forward : -10.06, None : 1.10, right : 1.21, left : -11.13}|\n",
+    "|('forward', 'green', 'right', None)| forward | on green when going forward we have right of the way |{ forward : 1.59, None : -4.76, right : 0.01, left : 0.17}|\n",
+    "|('forward', 'red', None, 'left')| None | on red when going forward we can't go |{ forward : -9.73, None : 1.60, right : 1.09, left : -10.11}|\n",
     "|('left', 'green', None, 'left')| left | on green when taking left turn if oncoming car is also taking left we can take left without yielding|\n",
     "\n",
-    "4. There were some examples where agent did not learn optimal policy, for e.g.\n",
-    "|State|Action|Note|\n",
-    "|:----|:-----|:---|\n",
-    "|('right', 'green', 'forward', 'forward')| forward | It may have happened that due to exploration agent may have gone forward on this state instead of going right which is allowed and may have been positively rewarded because there was no accident and it as oncoming car was going forward so because of that it may have learned a wrong behavior and other states were not explored at all with 0.0 score so may be increasing coverage may result in forward getting more rewarded but that action was not explored|\n"
+    "4.There were some examples where agent did not learn optimal policy, for e.g.\n",
+    "\n",
+    "|State|Action|Note|Q-values|\n",
+    "|:----|:-----|:---|:-------|\n",
+    "|('right', 'green', 'forward', 'forward')| forward | It may have happened that due to exploration agent may have gone forward on this state instead of going right which is allowed and may have been positively rewarded because there was no accident and it was allowed; Because of that it may have learned a wrong behavior and other state of going right was not explored at all with 0.0 score so may be increasing more trials may result in right getting more rewarded but that action was not explored|{forward : 1.25,None : -2.71, right : 0.00, left : 0.00}|\n"
    ]
   },
   {
